@@ -17,11 +17,14 @@ public class RecipeIngredienceRepository extends DTO2Repository<RecipeIngredienc
 
     @Override
     public boolean Update(RecipeIngredienceDTO dto) throws SQLException {
-        int r = connection.createStatement().executeUpdate(String.format(
-            "UPDATE recipe_Ingredients \n" +
-            "SET recipe_Ingredients_amount = %f, recipe_Ingredients_Unit = '%s' \n" +
-            "WHERE recipe_id = %d AND Ingredient_id = %d", 
-            dto.amount, dto.type, dto.id1, dto.id2));
+
+        String sql = """
+            UPDATE recipe_Ingredients
+            SET recipe_Ingredients_amount = %f, recipe_Ingredients_Unit = '%s'
+            WHERE recipe_id = %d AND Ingredient_id = %d
+            """.formatted(dto.amount, dto.type, dto.id1, dto.id2);
+
+        int r = connection.createStatement().executeUpdate(sql);
         return r == 1;
     }
 }
